<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">admin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Propiedades</string>
    <string name="menu_slideshow">Inquilinos</string>
    <string name="menu_tools">Pagos</string>
    <string name="menu_share">Contratos</string>
    <string name="menu_send">Cerrar Sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="prop">
        <item> </item>
        <item>Casa</item>
        <item>Departamento</item>
        <item>Monoambiente</item>
    </string-array>

    <string-array name="uso">
        <item> </item>
        <item>Comercial</item>
        <item>Vivienda</item>
    </string-array>

    <string-array name="lista">
        <item> </item>
        <item>Comercial</item>
        <item>Vivienda</item>
    </string-array>

    <string-array name="inqui">
        <item>DNI </item>
        <item>33619487</item>
        <item>APELLIDO</item>
        <item>Quintero</item>
        <item>NOMBRE</item>
        <item>Maria</item>
        <item>DIRECCION</item>
        <item>Avda Eva Peron 75</item>
        <item>TELEFONO</item>
        <item>2664 757365</item>
    </string-array>

    <string-array name="inqui2">
        <item>DNI </item>
        <item>54003703</item>
        <item>APELLIDO</item>
        <item>Quintero</item>
        <item>NOMBRE</item>
        <item>Candela</item>
        <item>DIRECCION</item>
        <item>Avda Eva Peron 75</item>
        <item>TELEFONO</item>
        <item>2664 649157</item>
    </string-array>


    <string-array name="pagos1">
        <item>Salta 325</item>
        <item>Nro de Pago</item>
        <item>1</item>
        <item>Fecha</item>
        <item>10-10-2019</item>
        <item>Importe</item>
        <item>8000</item>
        <item>Nro de Pago</item>
        <item>2</item>
        <item>Fecha</item>
        <item>10-10-2019</item>
        <item>Importe</item>
        <item>8000</item>
    </string-array>

    <string-array name="contra1">
        <item>Chacabuco 26</item>
        <item>Fecha de Inicio</item>
        <item>05-06-2016</item>
        <item>Fecha de Finalizacion</item>
        <item>06-06-2020</item>
        <item>Importe</item>
        <item>23000</item>
    </string-array>


</resources>
