<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectofinal.ui.perfil.PerfilFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyectofinal.ui.propiedades.PropiedadesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_propiedades" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyectofinal.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.proyectofinal.ui.pagos.PagosFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_pagos" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.proyectofinal.ui.contrato.ContratoFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_contrato" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.proyectofinal.ui.cerrarsesion.CerrarSesionFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_cerrarsesion" />
</navigation>